fix issue main block content spilling over footer

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -8,8 +8,17 @@ body {
         background: url('/media/background_image.jpeg') no-repeat center center fixed;
         background-size: cover;
         height: calc(100vh - 164px);
+        display: flex;
+        min-height: 80vh;
+        flex-direction: column;
         color: #555;
         font-family: 'Ubuntu';
+}
+
+main {
+    flex: 1 0 auto;
+    width: 100%;
+    min-height: 100vh;
 }
 
 .overlay {
